# wildcop

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: FindLLVM.cmake
src/: 0-1-7.cpp  0-1-7.h  CMakeLists.txt  common.h  pch.h  plugin.cpp
tests/: CMakeLists.txt  README.md  main.cpp
tests/0-1-7/: AssignmentWithLaterUse.green  AssignmentWithLaterUseNonConjured.green  AssignmentWithoutUse.red  AssignmentWithoutUseNonConjured.red  DiscardNonConjured.red  DiscardWithParameterExpression.red  DiscardedViaCommaOperator.red  DiscardedViaCommaOperatorNonConjured.red  IntDiscard.red  MultipleCallSingleUse.red  MultipleCallSingleUseNonConjured.red  NonConjuredUsedAsParameter.green  NonConjuredUsedViaBinOp.green  NonConjuredVoid.green  UsedAsParameter.green  UsedAsParameterExpression.green  VoidDiscardOK.green
